# wizsight

./: .gitignore  CLAUDE.md  README.md  launch.sh
backend/: main.py  pyproject.toml
backend/src/api/: __init__.py  main.py
backend/src/models/: __init__.py  control_requests.py  control_response.py  error_response.py  light_device.py  network_scan.py
backend/src/services/: __init__.py  discovery_service.py  light_service.py
backend/tests/contract/: test_lights_brightness.py  test_lights_colortemp.py  test_lights_state.py  test_lights_toggle.py  test_scan_get.py
backend/tests/integration/: test_control.py  test_discovery.py  test_error_handling.py
frontend/static/: app.js  index.html  styles.css
specs/001-lets-create-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-lets-create-a/contracts/: api-spec.yaml
